--- a/ContosoUniversity/Pages/Courses/Index.cshtml
+++ b/ContosoUniversity/Pages/Courses/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@page
+@page
 @model ContosoUniversity.Pages.Courses.IndexModel
 
 @{
-    ViewData["Title"] = "Courses";
+    ViewData["Title"] = "Index";
 }
 
-<h2>Courses</h2>
+<h2>Index</h2>
 
 <p>
     <a asp-page="Create">Create New</a>
