--- a/ContosoUniversity/Pages/Instructors/Index.cshtml
+++ b/ContosoUniversity/Pages/Instructors/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@page
+@page
 @model ContosoUniversity.Pages.Instructors.IndexModel
 
 @{
-    ViewData["Title"] = "Instructors";
+    ViewData["Title"] = "Index";
 }
 
-<h2>Instructors</h2>
+<h2>Index</h2>
 
 <p>
     <a asp-page="Create">Create New</a>
