Added custom CSS

--- a/ContosoUniversity/Pages/About.cshtml
+++ b/ContosoUniversity/Pages/About.cshtml
@@ -29,3 +29,9 @@
         </tr>
     }
 </table>
+
+
+<h2>About this site</h2>
+<p>Created By Daniel Green</p>
+<p>(208)-123-4567</p>
+<p>gre12013@byu.edu</p>
